--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,103 @@
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black;
+  color: white;
+}
+
+.body {
+  font-family: 'Helvetica Neue', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Default grid layout for desktop */
+.album-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); 
+  gap: 25px; 
+}
+
+.album {
+  position: relative;
+}
+
+/* Apply opacity to the image inside cover-image-wrapper with an easing transform */
+.cover-image-wrapper:hover img {
+  opacity: 0.4;
+  transition: opacity 0.3s, transform 0.3s ease-in; 
+}
+
+/* Reset opacity for albumIcons when hovered over album */
+.album:hover .albumIcons img {
+  opacity: 1;
+  transition: opacity 0.s, transform 0.2s ease-in; 
+}
+
+/* STORLEK PÅ ALBUMBILDR */
+.cover-image-wrapper img {
+  position: relative;
+  height: auto;
+  max-width: 600px;
+  width: 100%;
+}
+
+/* SÅ IKONERNA HAMNAR PÅ ALBUM BILDEN */
+.albumIcons {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.2s; 
+}
+
+/* STORLEK PÅ IKONER SAMT KONVERTERA TILL VITA */
+.cover-image-wrapper .albumIcons img {
+  width: 15px;
+  height: 15px;
+  filter: brightness(0) invert(1);
+}
+
+/* SKALAR UPP IKONERNA NÄR MAN HOVRAR ÖVER DOM */
+.albumIcons img:hover {
+  transform: scale(1.1); /* Scale up on hover */
+}
+
+/* FÖR ATT FÅ FRAM IKONERNA NÄR MAN HOVRAR ÖVER ALBUM */
+.cover-image-wrapper:hover .albumIcons {
+  display: flex;
+  gap: 10px;
+  transform: translate(-50%, -50%) scale(2.5); 
+}
+
+.artistName {
+  color: #a0a0a0
+}
+
+.artistName:hover,
+.albumName:hover {
+  text-decoration: underline; 
+}
+
+/* Add hover effect to the icon wrappers */
+.albumIcons .icon-wrapper:hover {
+  transform: scale(1.3);
+}
+
+/* Styles for tablet (2 albums per row) */
+@media (max-width: 1024px) {
+  .album-list {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+/* Styles for mobile (1 album per row) */
+@media (max-width: 666px) {
+  .album-list {
+    grid-template-columns: 1fr;
+  }
 }
