--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 :root {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
@@ -19,12 +17,74 @@
   justify-content: center;
 }
 
+.sortTitle {
+  margin-left: 50px;
+}
+
+.sortButtons {
+  margin-left: 50px;
+  display: flex;
+  gap: 10px;
+}
+
+.sortButtons button {
+  appearance: none;
+  background-color: #2ea44f;
+  border: 1px solid rgba(27, 31, 35, .15);
+  border-radius: 6px;
+  box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+  padding: 6px 16px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.sortButtons button:focus:not(:focus-visible):not(.focus-visible) {
+  box-shadow: none;
+  outline: none;
+}
+
+.sortButtons button:hover {
+  background-color: #2c974b;
+}
+
+.sortButtons button:focus {
+  box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+  outline: none;
+}
+
+.sortButtons button:disabled {
+  background-color: #94d3a2;
+  border-color: rgba(27, 31, 35, .1);
+  color: rgba(255, 255, 255, .8);
+  cursor: default;
+}
+
+.sortButtons button:active {
+  background-color: #298e46;
+  box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
 /* Default grid layout for desktop */
 .album-list {
   display: grid;
   grid-template-columns: repeat(4, 1fr); 
   gap: 25px; 
   margin: 25px 50px;
+  z-index: 1;
 }
 
 .album {
@@ -40,8 +100,12 @@
 
 /* Reset opacity for albumIcons when hovered over album */
 .album:hover .albumIcons img {
-  opacity: 1;
-  transition: opacity 0.s, transform 0.2s ease-in; 
+  opacity: 0.8;
+  transition: opacity 0.2s, transform 0.2s ease-in; 
+}
+
+.play-icon:hover {
+  opacity: 1 !important;
 }
 
 /* STORLEK PÅ ALBUMBILDR */
@@ -60,6 +124,7 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 0.2s; 
+  cursor: pointer;
 }
 
 /* STORLEK PÅ IKONER SAMT KONVERTERA TILL VITA */
@@ -117,6 +182,12 @@
     grid-template-columns: 1fr 1fr;
     margin: 0;
   }
+  .sortTitle {
+    margin-left: 10px;
+  }
+  .sortButtons {
+    margin: 10px;
+  }
 }
 
 /* Styles for mobile (1 album per row) */
@@ -125,4 +196,83 @@
     grid-template-columns: 1fr;
     margin: 0;
   }
+  .sortTitle {
+    margin-left: 10px;
+  }
+  .sortButtons {
+    margin: 10px;
+  }
+  .sortButtons button {
+    width: 80px;
+    font-size: 10px;
+    padding: 5px 0;
+    margin: 0;
+  }
+}
+
+/* Updated CSS for the sidebar */
+
+
+/* .playlist-button {
+  width: 60px;
+  background-color: #4444;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
+  z-index: 2; 
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: width 0.3s;
+  overflow: hidden;
+  height: 100vh;
+}
+
+.modal {
+  width: 100px;
+  background-color: #4444;
+  color: #fff;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  z-index: 1; 
+  overflow: hidden;
+  transition: width 0.3s;
+  position: relative; 
+}
+
+.modal.modal-active {
+  width: 300px; 
+  z-index: 2; 
+}
+
+.modal .sidebar {
+  display: block;
+  width: 500px;
+  background-color: red;
+  position: relative; 
+  z-index: 3; 
+}
+
+.modal-active {
+  width: 300px;
+  position: fixed;
+} 
+*/
+
+.sidebar-playlist-list {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  background-color: red;
+  z-index: 2;
+} 
+
+.playlist-button {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  position: fixed;
+
 }
