--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@
 }
 
 .artistName a, span {
-  font-family: Helvetica,sans-serif;
+  font-family: "Helvetica", sans-serif;
   font-size: 14px;
   text-decoration: none;
   color: #a0a0a0;
@@ -189,7 +189,9 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px; /* Add spacing between header and other content */
+  border-bottom: 1px solid #298e46;
 }
+
 
 .sidebar-playlist-list {
   position: fixed; /* Fixed position to keep the sidebar on the right */
@@ -208,7 +210,7 @@
 
 .sidebar h2 {
   color: #2ea44f;
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica", sans-serif;
 }
 
 .sidebar-playlist-item {
